--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2141,7 +2141,7 @@ DataAsset="\"Object.SkeletalMeshes\" "
 PreserveScaleRatio=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [MaterialEditor]
 PrimType=1
@@ -2208,7 +2208,7 @@ PrimType=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
